src/scss/modules/contact-modal/contact-modal.scss
.contact-modal {
  @include modal(#fff);
  max-width: 435px;
  font-size: em(14);

  &.show {
    pointer-events: auto;
    animation: modalSlideIn 5s ease-in-out forwards;
  }

  &.hide {
    animation: modalSlideOut 5s ease-in-out forwards;
  }
  
  &__header {
    text-align: center;
    border-bottom: 3px solid #dea53a;
  }

  &__body {
    padding: 25px;
    color: $tundora;
  }
  
  &__title {
    margin: 0;
    padding: 18px 0 12px;
    background-color: $nile-blue;
    font-weight: 400;
    font-size: em(30);
    color: $wild-sand;
    opacity: 0.93;
  }

  &__copy {
    font-size: 14px;
    font-weight: 500;
    margin: 0 0 14px;
    padding: 0;
  }

  &__email {
    text-align: center;
  }

  &__email-link {
    font-weight: 500;
    margin: 0 10px;
  }

  @include desktop {
    .home-contact-icon {
      cursor: default;
    }
    &:hover {
      .home-about-modal__close {
        opacity: 1;
      }
    }
  } 
}

@keyframes modalSlideIn {
  0% {
    transform: translate(-200%, -50%) rotate(-90deg);
    opacity: 0;
  }
  
  10% {
    transform: translate(-46%, -50%) rotate(4deg);
  }
  
  15%, 100% {
    transform: translate(-50%, -50%);
    opacity: 1;
  }
}

@keyframes modalSlideOut {
  0% {
    transform: translate(-50%, -50%);
    opacity: 1;
  }
  
  5% {
    transform: translate(-54%, -50%) rotate(-4deg);
  }

  15%, 100% {
    transform: translate(200%, -50%) rotate(90deg);
    opacity: 0;
  }
}

